fix-alignment

--- a/Lab1/src/App.css
+++ b/Lab1/src/App.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start; /* Align content at the top */
-  align-items: center;
+  align-items: start;
   height: 100%;
   min-height: 100vh;
 }
